2004-12-16  Eric Botcazou  <ebotcazou@adacore.com>

	PR middle-end/18882
	* function.c (assign_stack_local_1): Use BITS_PER_UNIT alignment
	when passed -2 as 'align'.
	(put_var_into_stack): Adjust calls to put_reg_into_stack.
	When passed a CONCAT, instruct put_reg_into_stack to use
	a consecutive stack slot for the second part.
	(put_reg_into_stack): Remove 'promoted_mode' parameter, add
	'consecutive_p' parameter.  Retrieve the register mode from 'reg'.
	When consecutive_p is true, instruct assign_stack_local_1 to use
	BITS_PER_UNIT alignment.
	(put_addressof_into_stack): Adjust call to put_reg_into_stack.

2004-12-16  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR middle-end/18590
	* function.c (fixup_var_refs_insns_with_hash): Do not invoke
	fixup_var_refs_insn on insns marked as deleted.

2004-12-15  Richard Henderson  <rth@redhat.com>

        PR target/19005
        * config/i386/i386.md (swaphi_1): Swap with swaphi_2, allow with
        optimize_size.
        (swapqi_1): Rename from swapqi.  Enable only for no partial reg
        stall and optimize_size.
        (swapqi_2): New.
        (swaphi_1, swaphi_2, swapqi_1): Add athlon_decode.
        (swapsi, swaphi_1, swaphi_2, swapqi_1, swapdi): Remove modrm override.

2004-12-13  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR middle-end/18730
	* emit-rtl.c (get_first_nonnote_insn, get_last_nonnote_insn): When
	the first/last insn is a sequence, return the first/last insn of the
	sequence.

2004-12-12  Richard Henderson  <rth@redhat.com>

        PR target/18932
        * config/i386/i386.md (all splits and peepholes): Use flags_reg_operand
        and compare_operator to propagate the input CC mode to the output.
        * config/i386/i386.c (flags_reg_operand, compare_operator): New.
        * config/i386/i386.h (PREDICATE_CODES): Add them.
        * config/i386/i386-protos.h: Update.

2004-12-10  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR rtl-optimization/16536
	Backport from mainline: