@@ -1,3 +1,10 @@
+2004-12-19  Roger Sayle  <roger@eyesopen.com>
+
+	PR middle-end/19068
+	* expr.c (expand_expr_real_1) <MAX_EXPR>: Ensure that target, op0
+	and op1 are all registers (or constants) before expanding the RTL
+	comparison sequence [to avoid reg_overlap_mentioned (target, op1)].
+
 2004-12-16  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR middle-end/18882
